cmake_minimum_required(VERSION 3.8)
project(ParallelGeneticAlgorithm LANGUAGES CUDA C CXX)
include_directories(${CMAKE_SOURCE_DIR})
set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -G")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
add_subdirectory(lib)

file(GLOB_RECURSE src ./src/*.cpp)
add_executable(main main.cpp ${src})
# add_subdirectory(tests)
# add_subdirectory(examples)
