set(LIB_SRC linked_list.c job_base.c machine_base.c common.c chromosome_base.c)
set_source_files_properties(${LIB_SRC} PROPERTIES LANGUAGE CUDA)
add_library(lib STATIC ${LIB_SRC})
target_compile_features(lib PUBLIC cxx_std_11)
set_target_properties(lib PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
#set_target_properties(lib PROPERTIES LINKER_LANGUAGE CXX)
target_include_directories(lib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} ${CUDA_LIBRARIES})
