find_package(GTest)
find_package(CUDA REQUIRED)
include_directories(${GTest_INCLUDE_DIRS})
file(GLOB_RECURSE private_cppsources ${CMAKE_CURRENT_SOURCE_DIR}/../private/test_*.cpp)
file(GLOB_RECURSE private_cusources ${CMAKE_CURRENT_SOURCE_DIR}/../private/*.cu)
add_executable(TestJobBase main.cpp ${private_cusources} ${private_cppsources} test_job_base_host.cpp test_job_base_device.cu)
add_executable(MsFileGenerate ms_file_generate.cpp)
set_property(TARGET TestJobBase PROPERTY CUDA_SEPARABLE_COMPILATION ON)
target_link_libraries(TestJobBase lib ${GTest_LIBS} gtest gtest_main Threads::Threads ${CUDA_LIBRARIES})
