find_package(GTest)
find_package(CUDA REQUIRED)
include_directories(${GTest_INCLUDE_DIRS})
set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -G")
file(GLOB_RECURSE private_cppsources ${CMAKE_CURRENT_SOURCE_DIR}/../private/test_*.cpp)
file(GLOB_RECURSE private_cusources ${CMAKE_CURRENT_SOURCE_DIR}/../private/*.cu)
add_executable(TestLinkedList main.cpp ${private_cppsources} ${private_cusources} test_linked_list_host.cpp test_linked_list_device_opt.cu)
add_executable(ArraysGenerator generator.cpp)
set_property(TARGET TestLinkedList PROPERTY CUDA_SEPARABLE_COMPILATION ON)
target_link_libraries(TestLinkedList lib ${GTest_LIBS} gtest gtest_main Threads::Threads ${CUDA_LIBRARIES} cudart cuda)
