find_package(GTest)
find_package(CUDA REQUIRED)
include_directories(${GTest_INCLUDE_DIRS})
set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -G")
file(GLOB_RECURSE private_cppsources ${CMAKE_CURRENT_SOURCE_DIR}/../private/test_*.cpp)
file(GLOB_RECURSE private_cusources ${CMAKE_CURRENT_SOURCE_DIR}/../private/*.cu)
add_executable(TestMachineBase main.cpp ${private_cppsources} ${private_cusources} test_machine_base_device_opt.cu test_machine_base_host.cpp)
set_property(TARGET TestMachineBase PROPERTY CUDA_SEPARABLE_COMPILATION ON)
target_link_libraries(TestMachineBase lib ${GTest_LIBS} gtest gtest_main Threads::Threads ${CUDA_LIBRARIES} cudart cuda)
